Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,12 +5,15 @@ agent:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: 'Block #1'
+  - name: Checkout
     task:
       jobs:
         - name: 'Job #1'
           commands:
             - checkout
-        - name: 'Job #2'
+  - name: Run test
+    task:
+      jobs:
+        - name: 'Job #1'
           commands:
             - rake test
