--- a/.semaphore.yml
+++ b/.semaphore.yml
@@ -14,6 +14,6 @@ blocks:
             - checkout
             - sem-version ruby 2.5.5
             - bundle
-            - rubocop
-            - rake test
+            - bundle exec rubocop
+            - bundle exec rake test
             - gem build numberator.gemspec
